--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,4 @@
 @import "tailwindcss";
-
 @custom-variant dark (&:is(.dark *));
 
 
@@ -9,7 +8,9 @@
 }
 
 
-
+* { 
+  font-family: "IBM Plex Sans", sans-serif;
+}
 
 body { 
   background-color: #f2f2f2;
@@ -142,7 +143,4 @@ padding: 5px 20px;
 }
 
 
-.pricing_plan { 
-  background-image: url("/public/homepage/price_bg_bg.png");
-  background-size: 100% 100%;
-}
+
