--- a/app/globals.css
+++ b/app/globals.css
@@ -3,20 +3,18 @@
 
 @font-face {
   font-family: "Red Hat Display";
-  src: url("/fonts/Red_Hat_Display/RedHatDisplay-VariableFont_wght.ttf") format("truetype");
+  src: url("/fonts/Red_Hat_Display/RedHatDisplay-VariableFont_wght.ttf")
+    format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
 
- * {
+* {
   font-family: "Red Hat Display", sans-serif;
 }
 
-
-
-
- .clip-logo {
+.clip-logo {
   clip-path: polygon(0 0, 100% 0, 92% 100%, 0% 100%);
   border-radius: 0.65rem;
 }
@@ -39,138 +37,136 @@
   background: transparent;
 }
 
-@media (max-width : 700px) {
-  .angelsoft-bg { 
-    background : white;
+@media (max-width: 700px) {
+  .angelsoft-bg {
+    background: white;
   }
-  
 }
 
-
-body { 
+body {
   background-color: #f2f2f2;
-    margin: 0px;
+  margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   overflow-x: hidden;
 }
 
-
-
 html {
   scroll-behavior: smooth;
 }
 
-
-.footer_animate { 
+.footer_animate {
   animation: animate-right linear infinite;
- 
 }
 
 @keyframes animate-right {
-  
-   0%, 100% {
+  0%,
+  100% {
     transform: translate3d(0, 0, 0) rotateZ(0.01deg);
+  }
 }
-}
-
 
 /* hero section cards style  */
 .image {
-width: 100%;
-height: 100%;
-border-radius: 20px;
-transition: all 0.3s ease-in-out;
-z-index: 20;
-box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+  z-index: 20;
+  box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
 }
 .card-wrapper {
-position: relative;
-width: 400px;
-height: 500px;
-border-radius: 20px;
-overflow: hidden;
-transition: all 0.3s ease-in-out;
-box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
+  position: relative;
+  width: 400px;
+  height: 500px;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
 }
 .card-wrapper:hover .image {
-filter: blur(1.4px);
-transform: scale(1.5);
-overflow: hidden;
-transition: all 0.3s linear;
-box-shadow: inset -6px -1px 32px 0px rgba(0, 0, 0, 0.75);
+  filter: blur(1.4px);
+  transform: scale(1.5);
+  overflow: hidden;
+  transition: all 0.3s linear;
+  box-shadow: inset -6px -1px 32px 0px rgba(0, 0, 0, 0.75);
 }
 .card-wrapper:hover .card-bottom {
-transform: translate(0%, -50%);
-transition: all 0.8s ease;
-background-color: rgba(110, 122, 92, 0.7);
+  transform: translate(0%, -50%);
+  transition: all 0.8s ease;
+  background-color: rgba(110, 122, 92, 0.7);
 }
 .card-top {
-position: relative;
-width: 100%;
-height: 100%;
-z-index: 1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 .card-bottom {
-width: 100%;
-position: absolute;
-z-index: 20;
-display: nonee;
-top: 50%;
-background-color: rgba(110, 122, 92, 0);
-padding: 100px 20px;
-color: #fff;
-transform: translate(100%, -50%);
+  width: 100%;
+  position: absolute;
+  z-index: 20;
+  display: nonee;
+  top: 50%;
+  background-color: rgba(110, 122, 92, 0);
+  padding: 100px 20px;
+  color: #fff;
+  transform: translate(100%, -50%);
 }
 .top-text {
-font-size: 25px;
-line-height: 40px;
-font-weight: bold;
-letter-spacing: 1px;
+  font-size: 25px;
+  line-height: 40px;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 .bottom-text {
-font-size: 15px;
+  font-size: 15px;
 }
 .button {
-position: relative;
-display: block;
-outline: none;
-cursor: pointer;
-margin-top: 25px;
-border: none;
-border-radius: 3px;
-background-color: #f8961e;
-color: #fff;
-padding: 5px 20px;
+  position: relative;
+  display: block;
+  outline: none;
+  cursor: pointer;
+  margin-top: 25px;
+  border: none;
+  border-radius: 3px;
+  background-color: #f8961e;
+  color: #fff;
+  padding: 5px 20px;
 }
-
 
 .animate-bounce-vertical {
   animation: bounce-vertical 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 @keyframes bounce-vertical {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
- 
-  
+
   50% {
     transform: translateY(-20px);
   }
- 
 }
-
 
 /* --- Base Keyframes for Wave Movement --- */
 @keyframes wave-move-right {
-  0% { transform: translateX(-20px); }
-  100% { transform: translateX(20px); }
+  0% {
+    transform: translateX(-20px);
+  }
+  100% {
+    transform: translateX(20px);
+  }
 }
 
 @keyframes wave-move-left {
-  0% { transform: translateX(20px); }
-  100% { transform: translateX(-20px); }
+  0% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(-20px);
+  }
 }
 
 .animate-bg-wave-slow {
@@ -180,12 +176,6 @@ padding: 5px 20px;
 .animate-bg-wave-fast {
   animation: wave-move-left 18s linear infinite alternate;
 }
-
-
-
-
-
-
 
 .mobile-bg-fix {
   will-change: transform;
@@ -198,7 +188,6 @@ padding: 5px 20px;
     transform: scale(1.1) translateZ(0);
   }
 }
-
 
 .icon-wrapper {
   position: relative;
@@ -216,8 +205,14 @@ padding: 5px 20px;
   z-index: 5;
 }
 
+.slick-slide > div {
+  margin: 0 10px !important;
+}
 
+.slick-list {
+  margin: 0  !important;
+}
 
-
-
-
+.slick-slide {
+  height: auto;
+}
